--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,16 @@ dependencies:
   firebase_auth: ^4.0.1
   cloud_firestore: ^4.0.1
   firebase_storage: ^11.0.1
-  flutter_native_splash: ^2.2.0+1
   cupertino_icons: ^1.0.5
   page_transition: ^2.0.9
+  cached_network_image: ^3.2.2
+  url_launcher: ^6.1.6
+  provider: ^6.0.4
+  intl: ^0.17.0
+  flutter_slidable: ^2.0.0
+  loading_indicator: ^3.1.0
+  pull_to_refresh: ^2.0.0
+  awesome_dialog: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -29,7 +36,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
